Added delete db functionality to Delete dump endpoint
