# ANITA/python/database/anita/controller/ProductController.py
@@ -213,6 +213,16 @@ class ProductController(TableController):
         products = {market: timestamps}
         return products
 
+    def delete_dumps(self, market, timestamps):
+        query = "DELETE FROM `{0}`.`{1}` WHERE (`market` = %s) AND (`timestamp` = %s)".format(self.db_name, TABLE_NAME)
+
+        values = []
+        for timestamp in timestamps:
+            values.append((market, timestamp))
+
+        self.mysql_db.delete(query, values)
+
+
     def check_table(self):
         sql = "DESCRIBE product;"
         return self._mysql_db.search(sql)
